--- a/public/assets/css/accueil.css
+++ b/public/assets/css/accueil.css
@@ -39,6 +39,11 @@ p {
     margin-right: 30px;
 }
 
+p.congrats {
+    font-size: 25px;
+    text-align: center;
+}
+
 #fog {
     position:fixed;
     bottom:0px;
@@ -51,4 +56,15 @@ p {
     border-color: #080808;
     font-size: 30px;
     font-weight: bold;
+}
+
+#image {
+    height: 100px;
+    width: 100px;
+    margin: auto;
+    padding-top: 5px;
+}
+
+.card {
+    margin: 20px;
 }
